i think ill pause and focus on getting this website integrated. my curre

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -6,8 +6,9 @@ runConfig:
 
 routes:
   - type: redirect
-    source: "https://www.mayneinspectors.com/**"
+    source: "https://maynehomeinspectorsfl.com/**"
     destination: "https://mayneinspectors.com"
     statusCode: 301
+
 
 
