Site Not Found Why am I seeing this? There are a few potential reasons:

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -4,11 +4,11 @@
 runConfig:
   maxInstances: 1
 
+headers:
+  - host: mayneinspectors.com
+
 routes:
   - type: redirect
     source: "https://maynehomeinspectorsfl.com/**"
     destination: "https://mayneinspectors.com"
     statusCode: 301
-
-
-
