--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -12,6 +12,13 @@ routes:
     source: "https://maynehomeinspectorsfl.com/**"
     destination: "https://mayneinspectors.com/"
     statusCode: 301
+  
+  # This rule forces all traffic to be secure (HTTPS).
+  - type: redirect
+    source: "http://mayneinspectors.com/**"
+    destination: "https://mayneinspectors.com/"
+    statusCode: 301
+
   # This is the primary rule that serves your website content. It tells App Hosting
   # to handle requests for your custom domain by running your Next.js application.
   - type: rewrite
