--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^12.1.1",
     "genkit": "^1.8.0",
+    "lite-youtube-embed": "^0.3.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
