--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -23,6 +23,12 @@ routes:
     destination: "https://mayneinspectors.com/"
     statusCode: 301
 
+  # Redirects for old capitalized or spaced service area URLs to the new slug format
+  - type: redirect
+    source: "/service-areas/(LaBelle|Lehigh Acres|Clewiston|Moore Haven|Immokalee|Fort Myers|Cape Coral|Punta Gorda|Port Charlotte|Montura Ranch Estates)"
+    destination: "/service-areas/:1"
+    statusCode: 301
+
   # This is the primary rule that serves your website content. It tells App Hosting
   # to handle requests for your custom domain by running your Next.js application.
   - type: rewrite
