--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.3",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
